# faircodelab_chatbot

./: README.md  pyproject.toml  setup.py
faircodelab_chatbot/: api.py  hooks.py  modules.txt  pyproject.toml
faircodelab_chatbot/faircodelab_chatbot/doctype/faq/: faq.js  faq.json  faq.py  test_faq.py
faircodelab_chatbot/faircodelab_chatbot/doctype/faqs/: faqs.json
faircodelab_chatbot/public/css/: chatbot.css
faircodelab_chatbot/public/images/: Untitled design.png:Zone.Identifier
faircodelab_chatbot/public/js/: chatbot.js
faircodelab_chatbot/www/: chatbot.html
