[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "faircodelab_chatbot"
version = "0.0.1"
description = "FairCodeLab Chatbot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Vinay", email = "reddysrivinayofficial@gmail.com"}
]

dependencies = [
    "frappe>=15.0.0",
    "openai==0.27.8"
]

[tool.frappe]
app_name = "faircodelab_chatbot"
version = "0.0.1"