[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "faircodelab_chatbot"
version = "0.0.1"
description = "FairCodeLab Chatbot"
authors = [
    { name = "vinay", email = "reddysrivinayofficial@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==0.27.8",
]